Fix Adopt CTA Instagram alignment

--- a/styles.css
+++ b/styles.css
@@ -334,8 +334,11 @@ button {
 
 .cta-row .instagram-link {
   height: 3.05rem;
-  padding-block: 0;
+  padding: 0;
   line-height: 1;
+  align-self: center;
+  position: relative;
+  top: 1px;
 }
 
 .cta-row .instagram-link-icon {
